--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,7 @@
     --body-bg: #f8fafc;
 
     // Typography
-    --font-family-sans-serif: 'Nunito', sans-serif;
+    --font-family-sans-serif: 'Monstserrat', sans-serif;
     --font-size-base: 0.9rem;
     --line-height-base: 1.6;
 
